--- a/core/Makefile
+++ b/core/Makefile
@@ -158,13 +158,13 @@ ifeq ($(TARGET_BUILD_VARIANT),user)
 
   # Dev. branches should have DISPLAY_BUILD_NUMBER set
   ifeq "true" "$(DISPLAY_BUILD_NUMBER)"
-    BUILD_DISPLAY_ID := $(BUILD_ID).$(BUILD_NUMBER) $(BUILD_KEYS)
+    BUILD_DISPLAY_ID := $(BUILD_ID).$(BUILD_NUMBER)
   else
-    BUILD_DISPLAY_ID := $(BUILD_ID) $(BUILD_KEYS)
+    BUILD_DISPLAY_ID := $(BUILD_ID)
   endif
 else
-  # Non-user builds should show detailed build information
-  BUILD_DISPLAY_ID := $(build_desc)
+  # Non-user builds can show simple build info
+  BUILD_DISPLAY_ID := $(BUILD_ID)
 endif
 
 # Whether there is default locale set in PRODUCT_PROPERTY_OVERRIDES
