Mitigate build error form BUILT_DYNAMIC_INFORMATION
error: writing to readonly directory: "BUILT_DYNAMIC_INFORMATION"

Change-Id: I1597f730be8d9a906fbe48d93d8355a6e3a2b36b

--- a/core/Makefile
+++ b/core/Makefile
@@ -4969,6 +4969,7 @@ define build-dynamic-partition-metadata
     $(call dump-dynamic-partitions-info,$(PRODUCT_OUT)/dynamic_partition_metadata.txt)
 endef
 
+.PHONY: BUILT_DYNAMIC_INFORMATION
 BUILT_DYNAMIC_INFORMATION:
 	@rm -f $(PRODUCT_OUT)/dynamic_partition_metadata.txt
 	$(call build-dynamic-partition-metadata)
